Fix the footer CSS to make the text more readable
See #459.

--- a/data/static/p6/stylesheets/all.css
+++ b/data/static/p6/stylesheets/all.css
@@ -34,8 +34,8 @@ body { margin: 0; padding: 0; width: 100%; background-color: transparent; font-f
 
 [role="contentinfo"] { color: #e0dfdb; padding: 0; }
 [role="contentinfo"] ul { margin: 0; padding: 0; list-style: none; }
-[role="contentinfo"] a { color: #ffb81c; }
-[role="contentinfo"] a:hover { color: white; }
+[role="contentinfo"] a { color: #555555; }
+[role="contentinfo"] a:hover { color: #ef7918; }
 [role="contentinfo"] a:visited { color: #ffb81c; }
 
 .bg-red { background-color: #ffb81c; color: white; }
@@ -80,7 +80,7 @@ footer .bg-grey .footer-menu, footer .deadlines .footer-menu { text-transform: u
 footer .bg-grey .footer-menu li, footer .deadlines .footer-menu li { display: inline-block; margin-right: 10px; margin-left: 10px; }
 footer .bg-grey .footer-menu li a, footer .deadlines .footer-menu li a { text-decoration: none; color: white; }
 footer .bg-grey .footer-menu li a:visited, footer .deadlines .footer-menu li a:visited { color: white; }
-footer .bg-grey .footer-menu li a:hover, footer .deadlines .footer-menu li a:hover { color: #EEE; }
+footer .bg-grey .footer-menu li a:hover, footer .deadlines .footer-menu li a:hover { color: #ef7918; }
 footer .copyright { background-color: #CCC; color: #555555; padding: 15px 0; text-transform: uppercase; text-align: center; }
 footer .copyright p { font-size: 10px; font-size: 1rem; letter-spacing: 1px; margin: 0; }
 footer .copyright a { font-weight: 800; text-decoration: none; }
